add network
